--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
     </footer>
   </div> <!-- /container -->
 
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"></script>
-  <script>window.jQuery || document.write("<script src='/scripts/jquery.js'>\x3C/script>")</script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script>window.jQuery || document.write("<script src='/scripts/jquery-1.7.1.min.js'>\x3C/script>")</script>
 
   <script src="/scripts/scripts.js"></script>
 </body>
