--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content=""/>
   <meta name="viewport" content="width=device-width"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-  <link rel="stylesheet" href="/css/client.css"/>
+  <link rel="stylesheet" href="/css/application.css"/>
   <script src="/scripts/modernizr-2.5.3.js"></script>
 </head>
 <body>
@@ -19,7 +19,7 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.js"></script>
   <script>window.jQuery || document.write('<script src="/scripts/jquery-1.7.2.js"><\/script>')</script>
 
-  <script src="/scripts/client.js"></script>
+  <script src="/scripts/application.js"></script>
   <script>
     var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
     (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
